Changed css to fix footer issue on mobile device.

--- a/LOVA.API/wwwroot/css/site.css
+++ b/LOVA.API/wwwroot/css/site.css
@@ -84,16 +84,16 @@ button.accept-policy {
 -------------------------------------------------- */
 
 
-.footer {
+/*.footer {
   position: absolute;
   bottom: 0;
   width: 100%;
   overflow: scroll;
-  white-space: nowrap;
+  white-space: nowrap;*/
   /* Set the fixed height of the footer here */
-  height: 60px;
-  line-height: 60px; /* Vertically center the text there */
-}
+  /*height: 60px;
+  line-height: 60px;*/ /* Vertically center the text there */
+/*}*/
 
 
 
